objects/EUR_CRM_Survey_Answer__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Answer_Currency_Value__c</fullName>
        <label>Answer Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Answer_Date__c</fullName>
        <label>Answer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Answer_End_Date__c</fullName>
        <label>Answer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Answer_Number_Value__c</fullName>
        <label>Answer Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Answer_Start_Date__c</fullName>
        <label>Answer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Answer_Text_Value__c</fullName>
        <label>Answer Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question__c</fullName>
        <label>Question</label>
        <referenceTo>EUR_CRM_Question__c</referenceTo>
        <relationshipName>Survey_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>EUR_CRM_Survey__c</referenceTo>
        <relationshipName>Survey_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Survey</label>
        <referenceTo>EUR_CRM_Visit_Survey__c</referenceTo>
        <relationshipName>Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Answer (EU)</label>
    <listViews>
        <fullName>All_BE_Answers</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>EUR_CRM_Survey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Answer__c.EUR_BE_Survey_Answer</value>
        </filters>
        <label>All BE Answers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Answers</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>EUR_CRM_Survey__c</columns>
        <columns>EUR_CRM_Visit_Survey__c</columns>
        <columns>EUR_CRM_Answer_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Answer__c.EUR_ZA_Survey_Answer</value>
        </filters>
        <label>All ZA Answers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SAN-{000000}</displayFormat>
        <label>Survey Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Survey_Answer</fullName>
        <active>true</active>
        <label>EUR BE Survey Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Survey_Answer</fullName>
        <active>true</active>
        <label>EUR BG Survey Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Survey_Answer</fullName>
        <active>true</active>
        <label>DE Survey Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Survey_Answer</fullName>
        <active>true</active>
        <description>Record Type for DK Survey Answers</description>
        <label>EUR DK Survey Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Survey_Answer</fullName>
        <active>true</active>
        <label>EUR FI Survey Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Survey_Answer</fullName>
        <active>true</active>
        <label>EUR RU Survey Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Survey_Answer</fullName>
        <active>true</active>
        <label>EUR ZA Survey Answer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>